<resources>
    <string name="app_name">Bening</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nama_user">Andreas</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="button_setting">Pengaturan Aplikasi</string>
    <string name="button_sign_out">Keluar</string>
    <string name="simpan">Simpan</string>

    <string name="content_specs_Nama">Andreas Aji</string>
    <string name="content_specs_Email">AndreasAji@gmail.com</string>
    <string name="content_specs_Alamat">Perumahan Bogor Indah Blok I No. 25, RT 007/01, Rangkapan Jaya, Pancoran Mas, Depok.</string>
    <string name="content_specs_Jumlah">3 Galon</string>
    <string name="content_specs_Total">Rp20.000</string>
    <string name="isidetailpemesanan">Isi Detail Pemesanan</string>
    <string name="pilihpembayaran">Pilih Pembayaran</string>
    <string name="nama">Nama : </string>
    <string name="email">Email : </string>
    <string name="alamat">Alamat : </string>
    <string name="jumlah">Jumlah : </string>
    <string name="transfer">Transfer Bank</string>
    <string name="ewallet">E-Wallet</string>
    <string name="cod">COD (Cash On Delivery)</string>
    <string name="pemesanan">Pemesanan</string>
    <string name="judul">Pemesanan</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="totalbayar">Total</string>

    <string name="content_specs_Nomor">GL001</string>
    <string name="content_specs_NamaDriver">Agus Subo</string>
    <string name="content_specs_Status">On Process</string>
    <string name="detailpengiriman">Detail Pengiriman</string>
    <string name="detailpemesanan">Detail Pemesanan</string>
    <string name="nomorpemesanan">Nomor Pemesanan : </string>
    <string name="driver">Nama Driver : </string>
    <string name="status">Status : </string>
    <string name="pesananditerima">Pesanan Diterima</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
</resources>