<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/water">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_profile" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-16dp"
            android:background="#fff">
            <TextView
                android:id="@+id/tv_name"
                style="@style/textbold"
                android:layout_marginTop="36dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginHorizontal="24dp"
                android:layout_centerInParent="true"
                android:text="@string/nama_user" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_address"
            style="@style/TextSpec.Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="8dp"
            android:text="@string/nama_user" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="#fff">
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/edit_profile"
                android:text="@string/button_edit_profile"
                app:cornerRadius="32dp"
                style="@style/buttonprofile"/>
            <Button
                android:id="@+id/change_password"
                android:text="Ubah Sandi"
                android:layout_marginTop="8dp"
                app:cornerRadius="32dp"
                style="@style/buttonprofile"/>
            <Button
                android:id="@+id/sign_out"
                android:text="@string/button_sign_out"
                android:layout_marginTop="8dp"
                app:cornerRadius="32dp"
                style="@style/buttonprofile"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>