<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water"
    tools:context=".activities.DetailProdukActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.35"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp"
        android:layout_marginTop="90dp">

        <ImageView
            android:id="@+id/icon_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/water_icon"/>

        <TextView
            android:id="@+id/AppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bening Air Minum"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="#FFF"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:id="@+id/tvNamaProduk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama Produk"
                android:textColor="@color/my_primary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/product_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:src="@drawable/icon_photo"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="24dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginEnd="16dp"
                        android:text="ID Produk: " />

                    <TextView
                        android:id="@+id/tv_id"
                        style="@style/TextSpec.Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/content_specs_Nama" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textSize="14sp"
                        android:text="Stok Produk: " />

                    <TextView
                        android:id="@+id/tv_stok"
                        style="@style/TextSpec.Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:text="@string/content_specs_Email" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textSize="14sp"
                        android:text="Harga Produk: " />

                    <TextView
                        android:id="@+id/tv_harga"
                        style="@style/TextSpec.Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:text="@string/content_specs_Alamat"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textSize="14sp"
                        android:text="Tanggal Dibuat: " />

                    <TextView
                        android:id="@+id/tv_tanggal_dibuat"
                        style="@style/TextSpec.Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:text="@string/content_specs_Alamat"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textSize="14sp"
                        android:text="Tanggal Diupdate: " />

                    <TextView
                        android:id="@+id/tv_tanggal_update"
                        style="@style/TextSpec.Value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:text="@string/content_specs_Alamat"/>
                </TableRow>

            </TableLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Edit"
                android:backgroundTint="@color/my_secondary"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:textColor="#FFF"
                app:cornerRadius="32dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_hapus"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="Hapus"
                android:backgroundTint="@color/my_secondary"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:textColor="#FFF"
                app:cornerRadius="32dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>